--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     padding: 0;
     color: white;
+	background: transparent;
 }
 
 .background {
@@ -88,7 +89,7 @@ body {
 .main-card {
     position: relative;
     width: 150px;
-    height: 650px;
+    height: 600px;
     overflow: hidden;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -105,6 +106,7 @@ body {
     object-fit: cover;
     transition: transform 0.4s ease;
     display: block;
+	background: transparent;
 }
 
 .main-card:hover {
