--- a/styles.css
+++ b/styles.css
@@ -166,3 +166,72 @@ body {
 .subclass-list li {
     margin: 2px 0;
 }
+
+.styled-wrapper {
+  display: flex;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.buttonq {
+  position: relative;
+  width: 76px;
+  height: 76px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  overflow: hidden;
+  margin-left: 250px;
+}
+
+.buttonq:before {
+  content: "";
+  position: absolute;
+  inset: 7px;
+  border: 3px solid white;
+  border-radius: 50%;
+  transition: opacity 0.4s ease, transform 0.5s ease;
+}
+
+.buttonq:after {
+  content: "";
+  position: absolute;
+  inset: 7px;
+  border: 4px solid #599a53;
+  border-radius: 50%;
+  transform: scale(1.3);
+  opacity: 0;
+  transition: opacity 0.4s ease, transform 0.5s ease;
+}
+
+.buttonq:hover:before {
+  opacity: 0;
+  transform: scale(0.7);
+}
+
+.buttonq:hover:after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.buttonq-box {
+  display: flex;
+  position: absolute;
+  top: -1.5px;
+  left: 1.5px;
+  transition: transform 0.4s ease;
+}
+
+.buttonq:hover .buttonq-box {
+  transform: translateX(-69px);
+}
+
+.buttonq-elem {
+  width: 30px;
+  height: 30px;
+  margin: 24px 18px 0 22px;
+  fill: #f0eeef;
+}
