--- a/catalog.css
+++ b/catalog.css
@@ -26,7 +26,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('assets/img/kowal.png') no-repeat center center/cover;
+    background: url('assets/img/kowal.webp') no-repeat center center/cover;
     filter: blur(10px);
     z-index: -1;
 }
@@ -37,7 +37,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/lowca.png') no-repeat center center/cover;
+  background: url('assets/img/lowca.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -48,7 +48,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/kucharz.png') no-repeat center center/cover;
+  background: url('assets/img/kucharz.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -59,7 +59,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/drwal.png') no-repeat center center/cover;
+  background: url('assets/img/drwal.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -70,7 +70,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/alchemik.png') no-repeat center center/cover;
+  background: url('assets/img/alchemik.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -81,7 +81,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/gornik.png') no-repeat center center/cover;
+  background: url('assets/img/gornik.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -92,7 +92,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/krawiec.png') no-repeat center center/cover;
+  background: url('assets/img/krawiec.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -103,7 +103,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/farmer.png') no-repeat center center/cover;
+  background: url('assets/img/farmer.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
@@ -114,7 +114,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('assets/img/zielarz.png') no-repeat center center/cover;
+  background: url('assets/img/zielarz.webp') no-repeat center center/cover;
   filter: blur(10px);
   z-index: -1;
 }
