--- a/catalog.css
+++ b/catalog.css
@@ -588,6 +588,7 @@ body.scrolling-hide .category-buttons {
   top: 60px;
   right: -300px; /* głębiej schowane */
   width: 275px;
+  min-height: 75px;
   background: rgba(10,10,10,0.95);
   border-left: 2px solid rgba(255,255,255,0.2);
   box-shadow: -4px 0 8px rgba(0,0,0,0.4);
