--- a/catalog.css
+++ b/catalog.css
@@ -190,22 +190,22 @@ header {
 }
 
 .tier-t0 {
-  background-color: #808080; 
+  background-color: #666666; 
 }
 .tier-t1 {
-  background-color: #d3d3d3; 
+  background-color: #34A853; 
 }
 .tier-t2 {
-  background-color: #8BC34A;
+  background-color: #FBBC04;
 }
 .tier-t3 {
-  background-color: #FFA500; 
+  background-color: #FF6D01; 
 }
 .tier-t4 {
-  background-color: #FFD700; 
+  background-color: #EA4335; 
 }
 .tier-t5 {
-  background-color: #FF4500; 
+  background-color: #FF0000; 
 }
 
 
